--- a/LogicSimulator/LogicSimulator/LogicSimulator.vcxproj
+++ b/LogicSimulator/LogicSimulator/LogicSimulator.vcxproj
@@ -185,19 +185,23 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CircuitView.h" />
     <ClInclude Include="LogicSimulator.h" />
     <ClInclude Include="LogicSimulatorDoc.h" />
     <ClInclude Include="LogicSimulatorView.h" />
     <ClInclude Include="MainFrm.h" />
+    <ClInclude Include="MenuView.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CircuitView.cpp" />
     <ClCompile Include="LogicSimulator.cpp" />
     <ClCompile Include="LogicSimulatorDoc.cpp" />
     <ClCompile Include="LogicSimulatorView.cpp" />
     <ClCompile Include="MainFrm.cpp" />
+    <ClCompile Include="MenuView.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -220,4 +224,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties RESOURCE_FILE="LogicSimulator.rc" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
