--- a/LogicSimulator/LogicSimulator/LogicSimulator.vcxproj
+++ b/LogicSimulator/LogicSimulator/LogicSimulator.vcxproj
@@ -191,6 +191,7 @@
     <ClInclude Include="LogicSimulatorView.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="MenuView.h" />
+    <ClInclude Include="PropertyView.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -202,6 +203,7 @@
     <ClCompile Include="LogicSimulatorView.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="MenuView.cpp" />
+    <ClCompile Include="PropertyView.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
