--- a/LogicSimulator/LogicSimulator/LogicSimulator.vcxproj.filters
+++ b/LogicSimulator/LogicSimulator/LogicSimulator.vcxproj.filters
@@ -39,10 +39,13 @@
     <ClInclude Include="Resource.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="MenuView.h">
+    <ClInclude Include="CircuitView.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="CircuitView.h">
+    <ClInclude Include="PropertyView.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="MenuView.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
@@ -62,10 +65,13 @@
     <ClCompile Include="LogicSimulatorView.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="MenuView.cpp">
+    <ClCompile Include="CircuitView.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="CircuitView.cpp">
+    <ClCompile Include="PropertyView.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="MenuView.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
