[기능 번호 15/19] : 입/출력 기능을 하는 Pin class 생성

--- a/LogicSimulator/LogicSimulator/LogicSimulator.vcxproj
+++ b/LogicSimulator/LogicSimulator/LogicSimulator.vcxproj
@@ -194,6 +194,7 @@
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="MenuView.h" />
     <ClInclude Include="orGate.h" />
+    <ClInclude Include="Pin.h" />
     <ClInclude Include="PropertyView.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
@@ -209,6 +210,7 @@
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="MenuView.cpp" />
     <ClCompile Include="orGate.cpp" />
+    <ClCompile Include="Pin.cpp" />
     <ClCompile Include="PropertyView.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
