--- a/LogicSimulator/LogicSimulator/LogicSimulator.vcxproj.filters
+++ b/LogicSimulator/LogicSimulator/LogicSimulator.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="orGate.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Pin.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="LogicSimulator.cpp">
@@ -90,6 +93,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="orGate.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Pin.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
