--- a/LogicSimulator/LogicSimulator/LogicSimulator.vcxproj.filters
+++ b/LogicSimulator/LogicSimulator/LogicSimulator.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="Pin.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="LogicObject.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="LogicSimulator.cpp">
@@ -96,6 +99,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Pin.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LogicObject.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
