--- a/LogicSimulator/LogicSimulator/LogicSimulator.vcxproj.filters
+++ b/LogicSimulator/LogicSimulator/LogicSimulator.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="LineObject.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="name_repo.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="LogicSimulator.cpp">
