--- a/LogicSimulator/LogicSimulator/LogicSimulator.vcxproj
+++ b/LogicSimulator/LogicSimulator/LogicSimulator.vcxproj
@@ -43,7 +43,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
     <UseOfMfc>Dynamic</UseOfMfc>
   </PropertyGroup>
@@ -197,12 +197,16 @@
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="MenuView.h" />
     <ClInclude Include="name_repo.h" />
+    <ClInclude Include="nandGate.h" />
+    <ClInclude Include="norGate.h" />
+    <ClInclude Include="notGate.h" />
     <ClInclude Include="orGate.h" />
     <ClInclude Include="Pin.h" />
     <ClInclude Include="PropertyView.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="xorGate.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="andGate.cpp" />
@@ -216,6 +220,9 @@
     <ClCompile Include="LogicSimulatorView.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="MenuView.cpp" />
+    <ClCompile Include="nandGate.cpp" />
+    <ClCompile Include="norGate.cpp" />
+    <ClCompile Include="notGate.cpp" />
     <ClCompile Include="orGate.cpp" />
     <ClCompile Include="Pin.cpp" />
     <ClCompile Include="PropertyView.cpp" />
@@ -225,6 +232,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="xorGate.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="LogicSimulator.reg" />
