--- a/LogicSimulator/LogicSimulator/LogicSimulator.vcxproj.filters
+++ b/LogicSimulator/LogicSimulator/LogicSimulator.vcxproj.filters
@@ -1,9 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="CircuitView.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="LogicObject.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
@@ -22,28 +19,16 @@
     <ClCompile Include="andGate.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Clock.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="MainFrm.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="MenuView.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="orGate.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Pin.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="stdafx.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Gate.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="PropertyView.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="notGate.cpp">
@@ -58,12 +43,33 @@
     <ClCompile Include="norGate.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="DFlipFlop.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Out.cpp">
+      <Filter>Wiring</Filter>
+    </ClCompile>
+    <ClCompile Include="Pin.cpp">
+      <Filter>Wiring</Filter>
+    </ClCompile>
+    <ClCompile Include="Wiring.cpp">
+      <Filter>Wiring</Filter>
+    </ClCompile>
+    <ClCompile Include="Clock.cpp">
+      <Filter>Wiring</Filter>
+    </ClCompile>
+    <ClCompile Include="CircuitView.cpp">
+      <Filter>MainView</Filter>
+    </ClCompile>
+    <ClCompile Include="MenuView.cpp">
+      <Filter>MainView</Filter>
+    </ClCompile>
+    <ClCompile Include="PropertyView.cpp">
+      <Filter>MainView</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="andGate.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="CircuitView.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="LogicSimulator.h">
@@ -76,12 +82,6 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Gate.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Clock.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Pin.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Resource.h">
@@ -105,13 +105,7 @@
     <ClInclude Include="LogicSimulatorView.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="MenuView.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="orGate.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="PropertyView.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="notGate.h">
@@ -125,6 +119,30 @@
     </ClInclude>
     <ClInclude Include="norGate.h">
       <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="DFlipFlop.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Out.h">
+      <Filter>Wiring</Filter>
+    </ClInclude>
+    <ClInclude Include="Clock.h">
+      <Filter>Wiring</Filter>
+    </ClInclude>
+    <ClInclude Include="Pin.h">
+      <Filter>Wiring</Filter>
+    </ClInclude>
+    <ClInclude Include="Wiring.h">
+      <Filter>Wiring</Filter>
+    </ClInclude>
+    <ClInclude Include="CircuitView.h">
+      <Filter>MainView</Filter>
+    </ClInclude>
+    <ClInclude Include="MenuView.h">
+      <Filter>MainView</Filter>
+    </ClInclude>
+    <ClInclude Include="PropertyView.h">
+      <Filter>MainView</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -164,6 +182,15 @@
     <Image Include="..\..\..\..\Desktop\image\gate.png">
       <Filter>리소스 파일</Filter>
     </Image>
+    <Image Include="res\bitmap4.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\bitmap5.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\bmp00003.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\cursor1.cur">
@@ -188,6 +215,12 @@
     </Filter>
     <Filter Include="리소스 파일">
       <UniqueIdentifier>{136238d9-0270-4f79-afc7-c23a5773762f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Wiring">
+      <UniqueIdentifier>{561100f3-894c-4e2d-bd10-73525fe00624}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="MainView">
+      <UniqueIdentifier>{4b030a4d-c5f9-46ea-bdca-0918bf48fbfa}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
