--- a/LogicSimulator/LogicSimulator/LogicSimulator.rc
+++ b/LogicSimulator/LogicSimulator/LogicSimulator.rc
@@ -83,7 +83,7 @@ IDR_MAINFRAME           BITMAP                  "res\\Toolbar.bmp"
 
 IDB_BITMAP1             BITMAP                  "res\\bitmap2.bmp"
 
-IDB_BITMAP2             BITMAP                  "res\\bitmap1.bmp"
+IDB_LIBRARY             BITMAP                  "res\\bitmap1.bmp"
 
 IDB_FLIPFLOP            BITMAP                  "res\\bitmap3.bmp"
 
