--- a/LogicSimulator/LogicSimulator/LogicSimulator.vcxproj.filters
+++ b/LogicSimulator/LogicSimulator/LogicSimulator.vcxproj.filters
@@ -76,11 +76,14 @@
     <ClCompile Include="TFlipFlop.cpp">
       <Filter>FlipFlop</Filter>
     </ClCompile>
-    <ClCompile Include="LibraryBox.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="Sevenseg.cpp">
       <Filter>Wiring</Filter>
+    </ClCompile>
+    <ClCompile Include="LibraryBox.cpp">
+      <Filter>Library</Filter>
+    </ClCompile>
+    <ClCompile Include="Box.cpp">
+      <Filter>Library</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -162,9 +165,6 @@
     <ClInclude Include="TFlipFlop.h">
       <Filter>FlipFlop</Filter>
     </ClInclude>
-    <ClInclude Include="LibraryBox.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="Resource.h">
       <Filter>리소스 파일</Filter>
     </ClInclude>
@@ -173,6 +173,12 @@
     </ClInclude>
     <ClInclude Include="Sevenseg.h">
       <Filter>Wiring</Filter>
+    </ClInclude>
+    <ClInclude Include="LibraryBox.h">
+      <Filter>Library</Filter>
+    </ClInclude>
+    <ClInclude Include="Box.h">
+      <Filter>Library</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -221,6 +227,9 @@
     <Image Include="res\flipflop.png">
       <Filter>리소스 파일</Filter>
     </Image>
+    <Image Include="res\bmp00004.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\cursor1.cur">
@@ -257,6 +266,9 @@
     </Filter>
     <Filter Include="Gate">
       <UniqueIdentifier>{d62886ef-2bad-44fb-8035-7ca2cfa90f7e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Library">
+      <UniqueIdentifier>{5cb8ff2e-4c87-43de-aa00-66c1a97ac002}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
