--- a/LogicSimulator/LogicSimulator/LogicSimulator.vcxproj.filters
+++ b/LogicSimulator/LogicSimulator/LogicSimulator.vcxproj.filters
@@ -86,6 +86,7 @@
       <Filter>Library</Filter>
     </ClCompile>
     <ClCompile Include="Graph.cpp" />
+    <ClCompile Include="undo.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LogicSimulator.h">
@@ -182,6 +183,7 @@
       <Filter>Library</Filter>
     </ClInclude>
     <ClInclude Include="Graph.h" />
+    <ClInclude Include="undo.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\LogicSimulatorDoc.ico">
